@@ -3,6 +3,8 @@
 
 Version 5.1.48
 
+  - Fix for Bug#92089 (28529781), PREPAREDSTATEMENT.SETTIMESTAMP NULLPOINTEREXCEPTION.
+
   - WL#13124, Support new utf8mb4 bin collation.
 
   - Fix for Bug#94585 (29452669), GETTABLENAME() RETURNS NULL FOR A QUERY HAVING COUNT(*) WITH JDBC DRIVER V8.0.12.
